fix(@clayui/css): LPD-15629 Accessibility link and text should have 3:1 color contrast

--- a/packages/clay-css/src/scss/atlas/variables/_globals.scss
+++ b/packages/clay-css/src/scss/atlas/variables/_globals.scss
@@ -434,7 +434,7 @@ $headings-color: null !default;
 // Body
 
 $body-bg: $white !default;
-$body-color: $gray-900 !default;
+$body-color: $dark-d1 !default;
 $body-moz-osx-font-smoothing: $moz-osx-font-smoothing !default;
 $body-webkit-font-smoothing: $webkit-font-smoothing !default;
 $body-text-align: inherit !default;
